--- a/tor_or_not_tor.ipynb
+++ b/tor_or_not_tor.ipynb
@@ -50,29 +50,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Za5Zkn35-vig",
-        "outputId": "1dcee00c-9bef-4f51-b6da-388c4457b364"
-      },
-      "source": [
-        "ls"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[01;34mdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "myLclvDmAttC"
       },
       "source": [
@@ -87,8 +64,6 @@
         "id": "J0Ykkm94bpqE"
       },
       "source": [
-        "dataframe.columns\r\n",
-        "\r\n",
         "df = dataframe.drop(columns=['Source IP', ' Destination IP', 'Active Mean', ' Active Std', ' Active Max', ' Active Min', 'Idle Mean', ' Idle Std', ' Idle Max', ' Idle Min'])"
       ],
       "execution_count": 4,
@@ -160,48 +135,47 @@
         "id": "cD3-DhC3fRlR"
       },
       "source": [
-        "import torch.nn as nn\r\n",
-        "import torch.nn.functional as F\r\n",
-        "#our class must extend nn.Module\r\n",
-        "class NaiveClassifier(nn.Module):\r\n",
-        "  def __init__(self, dropout=0.1):\r\n",
-        "    super(NaiveClassifier,self).__init__()\r\n",
-        "    #Our network consists of 3 layers. 1 input, 1 hidden and 1 output layer\r\n",
-        "    #This applies Linear transformation to input data. \r\n",
-        "    HIDDEN_SIZE = 128\r\n",
-        "    self.fc1 = nn.Linear(17,HIDDEN_SIZE)\r\n",
-        "    self.fc2 = nn.Linear(HIDDEN_SIZE,int(HIDDEN_SIZE))\r\n",
-        "    self.fc3 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE))\r\n",
-        "    self.fc4 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE))\r\n",
-        "    self.fc5 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE))\r\n",
-        "    self.fc6 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE/8))\r\n",
-        "    #This applies linear transformation to produce output data\r\n",
-        "    self.fc7 = nn.Linear(int(HIDDEN_SIZE/8), 2)\r\n",
-        "        \r\n",
-        "    #This must be implemented\r\n",
-        "  def forward(self,x):\r\n",
-        "    #Output of the first layer\r\n",
-        "    x = F.relu(self.fc1(x))\r\n",
-        "    x = F.relu(self.fc2(x))\r\n",
-        "    x = F.relu(self.fc3(x))\r\n",
-        "    x = F.relu(self.fc4(x))\r\n",
-        "    x = F.relu(self.fc5(x))\r\n",
-        "    x = F.relu(self.fc6(x))\r\n",
-        "    #This produces output\r\n",
-        "    x = self.fc7(x)\r\n",
-        "    return x\r\n",
-        "        \r\n",
-        "    #This function takes an input and predicts the class, (0 or 1)        \r\n",
-        "  def predict(self,x):\r\n",
-        "    #Apply softmax to output. \r\n",
-        "    pred = F.sigmoid(self.forward(x))\r\n",
-        "    ans = []\r\n",
-        "    #Pick the class with maximum weight\r\n",
-        "    for t in pred:\r\n",
-        "      if t[0]>t[1]:\r\n",
-        "          ans.append(0)\r\n",
-        "      else:\r\n",
-        "          ans.append(1)\r\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class NaiveClassifier(nn.Module):\n",
+        "  def __init__(self, dropout=0.1):\n",
+        "    super(NaiveClassifier,self).__init__()\n",
+        "    #Our network consists of 3 layers. 1 input, 1 hidden and 1 output layer\n",
+        "    #This applies Linear transformation to input data. \n",
+        "    HIDDEN_SIZE = 128\n",
+        "    self.fc1 = nn.Linear(17,HIDDEN_SIZE)\n",
+        "    self.fc2 = nn.Linear(HIDDEN_SIZE,int(HIDDEN_SIZE))\n",
+        "    self.fc3 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE))\n",
+        "    self.fc4 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE))\n",
+        "    self.fc5 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE))\n",
+        "    self.fc6 = nn.Linear(int(HIDDEN_SIZE),int(HIDDEN_SIZE/8))\n",
+        "    #This applies linear transformation to produce output data\n",
+        "    self.fc7 = nn.Linear(int(HIDDEN_SIZE/8), 2)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    #Output of the first layer\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = F.relu(self.fc2(x))\n",
+        "    x = F.relu(self.fc3(x))\n",
+        "    x = F.relu(self.fc4(x))\n",
+        "    x = F.relu(self.fc5(x))\n",
+        "    x = F.relu(self.fc6(x))\n",
+        "    #This produces output\n",
+        "    x = self.fc7(x)\n",
+        "    return x\n",
+        "        \n",
+        "    #This function takes an input and predicts the class, (0 or 1)        \n",
+        "  def predict(self,x):\n",
+        "    #Apply sigmoid to output. \n",
+        "    pred = F.sigmoid(self.forward(x))\n",
+        "    ans = []\n",
+        "    #Pick the class with maximum weight\n",
+        "    for t in pred:\n",
+        "      if t[0]>t[1]:\n",
+        "          ans.append(0)\n",
+        "      else:\n",
+        "          ans.append(1)\n",
         "    return torch.tensor(ans)"
       ],
       "execution_count": 8,
@@ -327,22 +301,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UhzvlPb-hR1q"
-      },
-      "source": [
-        "def predict(x):\r\n",
-        " #Convert into numpy element to tensor\r\n",
-        " x = torch.from_numpy(x).type(torch.FloatTensor)\r\n",
-        " #Predict and return ans\r\n",
-        " ans = model.predict(x)\r\n",
-        " return ans.numpy()"
-      ],
-      "execution_count": 13,
-      "outputs": []
     },
     {
       "cell_type": "code",
